# libfrag_public_test

./: libfrag.txt
libfrag/: .bumpversion.cfg  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  LICENCE.txt  MANIFEST.in  README.rst  azure-pipelines.yml  libfrag-dev-requirements.yml  libfrag.pc.in  libfragConfig.cmake.in  readthedocs.yml  requirements.txt  setup.py
libfrag/.circleci/: config.yml
libfrag/.copilot/: README.md  guidelines.md
libfrag/.copilot/context/: project-overview.md
libfrag/.copilot/prompts/: templates.md
libfrag/.github/: ISSUE_TEMPLATE.md
libfrag/.github/workflows/: ci.yml
libfrag/benchmark/: CMakeLists.txt  benchmark_libfrag.cpp
libfrag/binder/: Dockerfile
libfrag/docker/: Dockerfile
libfrag/docs/: CMakeLists.txt  Doxyfile  atom_class.md  mbe_documentation.md
libfrag/docs/source/: basic_usage.rst  benchmark.rst  conf.py  examples.rst  features.rst  folder_structure.rst  index.rst  installation.rst  python.rst  unit_tests.rst
libfrag/examples/: CMakeLists.txt  atom_demo.cpp  fragment_demo.cpp  hello_world.cpp  libfrag_version.cpp  mbe_demo.cpp  molecule_bond_demo.cpp
libfrag/include/libfrag/: atom.hpp  bond.hpp  fragment.hpp  global_scf_calculator.hpp  global_scf_config.hpp  global_scf_fragment_generator.hpp  global_scf_results.hpp  libfrag.hpp  libfrag_config.hpp  libfrag_version_major.hpp  libfrag_version_minor.hpp  libfrag_version_patch.hpp  mbe_calculator.hpp  mbe_config.hpp  mbe_fragment_generator.hpp  mbe_results.hpp  molecule.hpp
libfrag/python/: README_Fragment.md
libfrag/python/examples/: fragment_demo.py  mbe_demo.py
libfrag/python/module/libfrag/: __init__.py
libfrag/python/notebooks/: atom_demo.ipynb  fragment_demo.ipynb  hello_world.ipynb  mbe_demo.ipynb
libfrag/python/src/: CMakeLists.txt  def_atom.cpp  def_bond.cpp  def_build_config.cpp  def_fragment.cpp  def_global_scf.cpp  def_mbe.cpp  def_molecule.cpp  def_myclass.cpp  main.cpp
libfrag/python/tests/: test_atom.py  test_build_configuration.py  test_fragment.py  test_molecule_bond.py
libfrag/recipe/: meta.yaml
libfrag/src/: bond.cpp  fragment.cpp  global_scf_calculator.cpp  global_scf_config.cpp  global_scf_fragment_generator.cpp  global_scf_results.cpp  mbe_calculator.cpp  mbe_config.cpp  mbe_fragment_generator.cpp  mbe_results.cpp  molecule.cpp
libfrag/test/: CMakeLists.txt  test_fragment.cpp  test_libfrag_config.cpp  test_mbe.cpp
